# compare-user-agent-strings-python

./: README.md  setup.cfg
docs/: Transcript_of_installation_and_testing.txt
src/compare_user_agent_strings/: __init__.py  __version__.py  run_examples.py  ua_fingerprint.py
src/demo_package_sample_data_with_code/: user_agent_strings_are_compatible.py
tests/: test_my_module.py  test_my_ua_fingerprint.py
