[metadata]
name = compare-user-agent-strings

# The following version directive is one component of providing a single source
# for the version number.
# For more information, see the docstring comment in the __version__.py
# file in the module-code directory.
version = attr: compare_user_agent_strings.__version__

author = Jim Ratliff
author_email = jim@jim-ratliff.name
description = Compares pair of user-agent strings to detect stolen authentication cookie.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jimratliff/compare-user-agent-strings-python
project_urls =
    Bug Tracker = https://github.com/jimratliff/compare-user-agent-strings-python/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers 

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
    ua-parser

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    # my-command = compare_user_agent_strings.__main__:main

[bdist_wheel]
python-tag = py39